logs/myworkcell_core/build.make.007.log
[  0%] Built target rosgraph_msgs_generate_messages_cpp
[  0%] Built target roscpp_generate_messages_py
[  0%] Built target fake_ar_publisher_generate_messages_lisp
[  0%] Built target roscpp_generate_messages_lisp
[  0%] Built target roscpp_generate_messages_cpp
[  0%] Built target visualization_msgs_generate_messages_cpp
[  0%] Built target geometry_msgs_generate_messages_cpp
[  0%] Built target fake_ar_publisher_generate_messages_cpp
[  0%] Built target fake_ar_publisher_generate_messages_py
[  0%] Built target visualization_msgs_generate_messages_lisp
[  0%] Built target visualization_msgs_generate_messages_py
[  0%] Built target std_msgs_generate_messages_cpp
[  0%] Built target std_msgs_generate_messages_lisp
[  0%] Built target std_msgs_generate_messages_py
[  0%] Built target rosgraph_msgs_generate_messages_py
[  0%] Built target geometry_msgs_generate_messages_lisp
[  0%] Built target geometry_msgs_generate_messages_py
[  0%] Built target rosgraph_msgs_generate_messages_lisp
[35m[1mScanning dependencies of target vision_node
[0m[100%] [32mBuilding CXX object CMakeFiles/vision_node.dir/src/vision_node.cpp.o
/home/toby4548/catkin_ws/src/myworkcell_core/src/vision_node.cpp: In function ‘int main(int, char**)’:
/home/toby4548/catkin_ws/src/myworkcell_core/src/vision_node.cpp:42:1: error: a function-definition is not allowed here before ‘{’ token
 {
 ^
/home/toby4548/catkin_ws/src/myworkcell_core/src/vision_node.cpp:51:1: error: expected ‘}’ at end of input
 }
 ^
make[2]: *** [CMakeFiles/vision_node.dir/src/vision_node.cpp.o] Error 1
make[1]: *** [CMakeFiles/vision_node.dir/all] Error 2
make: *** [all] Error 2
